--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'me.xpyex.plugin.invactions.bukkit'
-version = '1.2.9'
+version = '1.3.0'
 
 repositories {
     mavenCentral()
@@ -18,9 +18,9 @@ repositories {
 }
 
 dependencies {
-    compileOnly fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
     compileOnly 'org.jetbrains:annotations:23.1.0'
+    compileOnly 'com.google.code.gson:gson:2.10'
 }
 
 def targetJavaVersion = 8
