--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
-group = 'me.xpyex.plugin.invactions.bukkit'
-version = '1.3.0'
+plugins {
+    id 'java'
+}
 
 allprojects {
     apply plugin: 'java'
+
+    group = 'me.xpyex.plugin.invactions.bukkit'
+    version = '1.3.0'
 
     repositories {
         mavenCentral()
@@ -49,7 +53,7 @@ allprojects {
         def props = [version: version]
         inputs.properties props
         filteringCharset 'UTF-8'
-        filesMatching('plugin.yml') {
+        filesMatching(['plugin.yml']) {
             expand props
         }
     }
