fix: 玩家配置文件不生成的问题; 高版本无法使用更好的无限附魔

--- a/MC12/src/main/resources/plugin.yml
+++ b/MC12/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: InvActions
 version: '${version}'
 main: me.xpyex.plugin.invactions.bukkit.InvActions
 authors: [ XPYEX ]
+api-version: 1.13
 softdepend:
   - XPLib
 commands:
