--- a/.github/workflows/ShadowJar.yml
+++ b/.github/workflows/ShadowJar.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: CnUsername-${{ steps.version.outputs.VERSION }}-all.jar
-        path: build/libs/*.jar
+        path: ShadowAllVer/build/libs/*.jar
 
     # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
     # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
