--- a/.github/workflows/ShadowJar.yml
+++ b/.github/workflows/ShadowJar.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -15,68 +8,96 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 8
-      uses: actions/setup-java@v4
-      with:
-        java-version: '8'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
 
-    # Configure Gradle for optimal use in GitHub Actions, including caching of downloaded dependencies.
-    # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      # 修复1：在所有作业开始前设置文件权限
+      - name: Fix file permissions
+        run: |
+          git config --global core.fileMode true
+          chmod +x gradlew
 
-    - name: Grant execute permission to gradlew
-      run: chmod +x gradlew
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
+        with:
+          java-version: '8'
+          distribution: 'temurin'
 
-    - name: Build with Gradle Wrapper
-      run: ./gradlew :ShadowAllVer:shadowJar
-      
-    - name: Get Version
-      id: version
-      run: |
-        APP_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
-        echo "VERSION=$APP_VERSION" >> $GITHUB_OUTPUT
+      # 修复2：显式声明 Gradle 版本
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: 8.9
 
-    - name: Upload with Version
-      uses: actions/upload-artifact@v4
-      with:
-        name: CnUsername-${{ steps.version.outputs.VERSION }}-all.jar
-        path: ShadowAllVer/build/libs/*.jar
+      # 修复3：添加带容错的缓存配置
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            build
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
+        continue-on-error: true  # 缓存失败不阻断流程
 
-    # NOTE: The Gradle Wrapper is the default and recommended way to run Gradle (https://docs.gradle.org/current/userguide/gradle_wrapper.html).
-    # If your project does not have the Gradle Wrapper configured, you can use the following configuration to run Gradle with a specified version.
-    #
-    # - name: Setup Gradle
-    #   uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
-    #   with:
-    #     gradle-version: '8.9'
-    #
-    # - name: Build with Gradle 8.9
-    #   run: gradle build
+      - name: Build with Gradle Wrapper
+        run: ./gradlew :ShadowAllVer:shadowJar --stacktrace
+
+      # 修复4：添加构建产物验证步骤
+      - name: Verify build output
+        run: |
+          echo "Build artifacts:"
+          ls -l ShadowAllVer/build/libs/
+
+      - name: Get Version
+        id: version
+        run: |
+          APP_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
+          echo "VERSION=$APP_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Upload with Version
+        uses: actions/upload-artifact@v4
+        with:
+          name: CnUsername-${{ steps.version.outputs.VERSION }}-all.jar
+          path: ShadowAllVer/build/libs/*.jar
 
   dependency-submission:
-
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write  # 依赖提交需要写权限
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 8
-      uses: actions/setup-java@v4
-      with:
-        java-version: '8'
-        distribution: 'temurin'
+      - uses: actions/checkout@v4
 
-    # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-    # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-    - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      # 修复5：dependency作业也需要权限修复
+      - name: Fix file permissions
+        run: |
+          git config --global core.fileMode true
+          chmod +x gradlew
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v4
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+
+      # 修复6：显式声明Gradle版本
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-version: 8.9
+
+      # 修复7：添加依赖提交前的清理步骤
+      - name: Clean build
+        run: ./gradlew clean
+
+      - name: Generate and submit dependency graph
+        uses: gradle/actions/dependency-submission@v4
+        with:
+          arguments: --rerun-tasks  # 强制重新生成依赖
