fix: 抄CnUsername抄出事了吧你这个蠢货

--- a/.github/workflows/ShadowJar.yml
+++ b/.github/workflows/ShadowJar.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Upload with Version
         uses: actions/upload-artifact@v4
         with:
-          name: CnUsername-${{ steps.version.outputs.VERSION }}-all.jar
+          name: InvActions-${{ steps.version.outputs.VERSION }}-all.jar
           path: ShadowAllVer/build/libs/*.jar
 
   dependency-submission:
