--- a/.github/workflows/ShadowJar.yml
+++ b/.github/workflows/ShadowJar.yml
@@ -15,11 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 修复1：在所有作业开始前设置文件权限
       - name: Fix file permissions
         run: |
-          git config --global core.fileMode true
           chmod +x gradlew
+          git config --global core.fileMode true
 
       - name: Set up JDK 8
         uses: actions/setup-java@v4
@@ -27,39 +26,34 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
 
-      # 修复2：显式声明 Gradle 版本
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
           gradle-version: 8.9
 
-      # 修复3：添加带容错的缓存配置
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-            build
           key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-${{ runner.os }}-
-        continue-on-error: true  # 缓存失败不阻断流程
+        continue-on-error: true
 
       - name: Build with Gradle Wrapper
         run: ./gradlew :ShadowAllVer:shadowJar --stacktrace
 
-      # 修复4：添加构建产物验证步骤
       - name: Verify build output
-        run: |
-          echo "Build artifacts:"
-          ls -l ShadowAllVer/build/libs/
+        run: ls -l ShadowAllVer/build/libs/
 
       - name: Get Version
         id: version
         run: |
           APP_VERSION=$(./gradlew properties -q | grep "version:" | awk '{print $2}')
           echo "VERSION=$APP_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Cleanup artifacts
+        run: rm -f dependency-graph_*.json
 
       - name: Upload with Version
         uses: actions/upload-artifact@v4
@@ -70,16 +64,13 @@ jobs:
   dependency-submission:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # 依赖提交需要写权限
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
 
-      # 修复5：dependency作业也需要权限修复
       - name: Fix file permissions
-        run: |
-          git config --global core.fileMode true
-          chmod +x gradlew
+        run: chmod +x gradlew
 
       - name: Set up JDK 8
         uses: actions/setup-java@v4
@@ -87,17 +78,13 @@ jobs:
           java-version: '8'
           distribution: 'temurin'
 
-      # 修复6：显式声明Gradle版本
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
           gradle-version: 8.9
 
-      # 修复7：添加依赖提交前的清理步骤
-      - name: Clean build
-        run: ./gradlew clean
-
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v4
         with:
-          arguments: --rerun-tasks  # 强制重新生成依赖
+          arguments: --rerun-tasks
+          dependency-graph-path: .github/dependency-graph/
